--- a/src/components/Menu/style.css
+++ b/src/components/Menu/style.css
@@ -79,7 +79,7 @@
 	background-color: #e67e51;
 } */
 /* Drink - Layer */
-.layer {
+/* .layer {
 	display: flex;
 	padding: 0.25rem;
 }
@@ -96,4 +96,4 @@
 .layer__label {
 	height: 1rem;
 	line-height: 1rem;
-}
+} */
